minor changes to visual cleanliness

--- a/SelfCareReminder/SelfCareReminder.resx
+++ b/SelfCareReminder/SelfCareReminder.resx
@@ -206,7 +206,7 @@
   <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAJQAAACgCAYAAADq10VvAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wQAADsEBuJFr7QAABi5JREFUeF7tlMut3EYQRV8SXnqjGByG4IgMr52Cw9DCQTgRpyG5hSq7ULrDITlF
+        vwAADr8BOAVTJAAABi5JREFUeF7tlMut3EYQRV8SXnqjGByG4IgMr52Cw9DCQTgRpyG5hSq7ULrDITlF
         9mfOAc5C85rd9bnQBwAAAAAAABzg05fPX49on8G7o8LxqnY1rI5a/pZ//fPzLtW3TXsWVkItOqtCctZ8
         t5UxP7mxrB1bEtWvq0JwhfFNK2suYgMV2rXToHpw1cLvMNZgZY5NLFipmmyqs3u0Z4dB1eiqvnvo9VjJ
         4xGHllUNnVHdnbVyuqDqaapemnvOXKW/a6WPRRyMq5q4QvV21Eq8FPWuqrWpzrrq/FX6m9bCOPQayCNj
@@ -238,4 +238,38 @@
   <metadata name="HideSettingsTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>206, 17</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAAAAAEAIADfBgAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAABqZJ
+        REFUeNrt3cFV40Ycx3HI20rSQC6kCciSStIBRzpIJYFAE+GSBtIKOeTx1kssW7JmNDP6fT6nPewDg6Xv
+        /Adb8tUVEOu69QOAXv34xy/vNb/+P7/+2fz8+6H1AwDaEQAI1nwEgS3UHudL2nJrIAAMr/bJ/fvPfxf9
+        er/99dOi/18zCLYAEMwEwDBKrfSlV/RSzk0GNSaBbgOw9snu4SUWllvzvPd6Yl/iVAxKHtu2ABBMACBY
+        0zG555dmbCHquvS539OYP9ex7UCp49MEAMGqr3JrV/lLir/0dda1TAunXXIMJK705xwe16WOuWIH7l5G
+        ulLxSI7C0mNhyTFw6vnp7VgqrUYAbAEg2OqKzK393upcYlLYw5SwZLUvtdKX+h6jMQEARV1ckany77nA
+        S1y6go0yFZxb+bf4423KseZlQKCKxRWx8q8z8mRQYtW/5OdPPLZcCwBUN7skVv66LlkZa04FJV/dWfKz
+        OZ6mf19NLgd24rc35wQqeXCsHfXnPF7Hz/9teeJ/sAWAYAIAwRZvAYxubS3ZTy8dHY+N/iXG/blfK81W
+        f+k/ZfKb2PuPYe4JeOyAOrXXX3viO06mtbj33xRbAAg2ewJQ9HGsvVBp6rm26i/X02p/jAkAgn1p/QBa
+        KX3XoJ5Wv8PHcumqPff309PP3VpPn/gzlwkAgsW9CrD1/QJrKnGDjWNfw15/nhFX/M9MABDMG4EKGHmq
+        OPf3As/3Plb6KRdfDPTBAdLOFuFJeX5Hvk/DGrYAEGz1/QBOSVk9eubuuut+Dx9GX+mnmAAgmABAsOK3
+        BV9ib2NmS3t+Z+PWv4O9jvvHFP9BS3/k94gHYg0l97C1Ppa99nPlBC/PFgCCbV7CWqvPZyNNDqXH93Mr
+        3OFzMPV/t3qeSrO6L9PtL2vUA7C2Egf4nABc8rVG+fn5xhYAggkABNvtODXaFmLL0bbkFoCxmQAg2G5v
+        CWZlg/NMABBMACCYAEAwAYBgAgDBBACCCQAEEwAItts3AvG90d4azTZMAMG8WxIBgGACAMEEAIIJAAQT
+        AAjmZUCG8nB/s/uXMx+f3jZ7dcYEAMEEAILZAlBcwphe07nfX8ktggCEG/lk/Xp32/ohFPX88jrr/z3c
+        37yXioAtAATb7XvBR17Z9mBvq3MPDieEUhNAt1sAJ/D2nLR5bAEgmABAsM22AK1GemMtTDMBQLDqE8Da
+        ld8KDvVs/iqAExr6YQsAwQQAggkABBMACCYAEKzbawGAaYcvr6+5MMgEAMEEAAbx9e62+PtoBACCCQAE
+        EwAIJgAQTAAgmABAMAGAYAIAwQQAggkABKsaAB/uAX0zAUCwzS4HdjNQ6I8JAIIJAAQTAAgmABBMACCY
+        AEAwAYBgAgDBBACCCQAEEwAIJgAQTAAgmABAMAGAYAIAwQQAggkABBMACCYAEEwAIJgAQDABgGCbfS4A
+        XF1dXT2/vLZ+CBwQAI5yomawBYBgAgDBbAEGN+qo7rMip31+Th+f3q5rfa/NAjDqgZrOibpvtgAQzBZg
+        J6zUXMIEAMEEAIJV3QKc++vlw/3N+8e/jbCwPRMABBMACCYAEEwAIJgAQDABgGDeCQidaHG9jAkAgpkA
+        oEM1LwE+ZAKAYAIAwQQAggkABBMACCYAEEwAIJgAQDABgGACAMEEAIIJAATr5mKgw0sh3SEYttF0Atjq
+        iifgOFsACCYAEEwAIJgAQDABgGACAMEEAIJ180YgSNTiswAOmQCgM1u+QU4AIJgAQDABgGACAMEEAIIJ
+        AAQTAAgmABBMACCYAEAwAYBgAgDBBACCdRmA1pdIQormAXh8erv2+QDQRvMAAO0IAAQTAAgmABBMACCY
+        AEAwAYBgAgDBBACCCQAEEwAIJgAQTAAgmABAMAGAYAIAwQQAggkABBMACCYAEKzbADy/vLo7MFT2pfUD
+        +HB4Z+CH+5v31o8HEnQ7AQD1CQAEEwAIJgAQTAAgmABAMAGAYAIAwQQAggkABBMACNZ9AFwUBPV0HwCg
+        ni4DcHhlIFBPlwEAtiEAEEwAIJgAQDABgGACAMEEAIIJAAQTAAgmABCsmw8GOefwgqCvd7etHw7sggkA
+        gnUbgMent2sXBUFd3QYAqE8AIJgAQDABgGACAMEEAIIJAAQTAAgmANBID593Mcy1ALB3Ld75agKAYAIA
+        wQQAggkABBvyj4DH/nrqJiH0poe/8p8zzPX2D/c3760fA/8R229KnuReBQA2NcwEMMVkQK9GuKOVCQCC
+        dV8o+mHaOm2EFf8zEwAAAAAA7Ny/nwPSR1CVxfMAAAAASUVORK5CYII=
+</value>
+  </data>
 </root>
