--- a/SelfCareReminder/SelfCareReminder.resx
+++ b/SelfCareReminder/SelfCareReminder.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="FadeReminderTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>118, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
@@ -203,10 +203,10 @@
   <metadata name="MyTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
-  <data name="pictureBox1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="Mascot.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAJQAAACgCAYAAADq10VvAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        vwAADr8BOAVTJAAABi5JREFUeF7tlMut3EYQRV8SXnqjGByG4IgMr52Cw9DCQTgRpyG5hSq7ULrDITlF
+        vAAADrwBlbxySQAABi5JREFUeF7tlMut3EYQRV8SXnqjGByG4IgMr52Cw9DCQTgRpyG5hSq7ULrDITlF
         9mfOAc5C85rd9bnQBwAAAAAAABzg05fPX49on8G7o8LxqnY1rI5a/pZ//fPzLtW3TXsWVkItOqtCctZ8
         t5UxP7mxrB1bEtWvq0JwhfFNK2suYgMV2rXToHpw1cLvMNZgZY5NLFipmmyqs3u0Z4dB1eiqvnvo9VjJ
         4xGHllUNnVHdnbVyuqDqaapemnvOXKW/a6WPRRyMq5q4QvV21Eq8FPWuqrWpzrrq/FX6m9bCOPQayCNj
